# mobile_test_wiki

./: pyproject.toml
test/: conftest.py  test_search_wikipedia.py
